# arkan_theme

./: .gitignore  .pre-commit-config.yaml  ARKAN_THEME_PROMPT.md  BRAND.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  DEVELOPMENT.md  INTEGRATIONS.md  README.md  REDESIGN_PROMPT.md  ROADMAP.md  SCENARIOS.md  build_bundle.sh  conftest.py  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  linters.yml  release.yml
arkan_theme/: __init__.py  boot.py  demo.py  exceptions.py  gate.py  hooks.py  install.py  modules.txt  seed.py
arkan_theme/api/: __init__.py  response.py
arkan_theme/caps/: capability.json  capability_bundle.json  gate.py  role_capability_map.json
arkan_theme/caps_integration/: __init__.py  gate.py
arkan_theme/config/: desktop.py
arkan_theme/desktop_icon/: arkan_theme.json
arkan_theme/help/: _meta.json
arkan_theme/public/: manifest.json  sw.js
arkan_theme/services/: __init__.py  asset_service.py  license_service.py  media_service.py  theme_service.py
arkan_theme/tests/: conftest.py  test_api.py  test_permissions.py
arkan_theme/translations/: ar.csv  de.csv
arkan_theme/utils/: __init__.py  constants.py  formatters.py  validators.py
arkan_theme/www/: 403.html  404.html  arkan_theme_about.html  (+4 more)
docs/: ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  FAQ.md  PERSONAS.md  README.md  SALES_PLAYBOOK.md  TRAINING.md
wiki/: API-Reference.md  Architecture.md  Deployment.md  DocTypes-Reference.md  FAQ.md  Getting-Started.md  Home.md  Permissions.md  Translation-Guide.md
(+123 files in other folders)
